--- a/MathFarm/Base.lproj/Main.storyboard
+++ b/MathFarm/Base.lproj/Main.storyboard
@@ -480,8 +480,8 @@
         <image name="thumbs_cartoon-farm-vector3" width="374" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="QIr-lO-kHw"/>
-        <segue reference="x1m-WK-pkG"/>
+        <segue reference="PCl-T2-okJ"/>
+        <segue reference="bmk-4a-TuV"/>
         <segue reference="xuI-Yr-VZ2"/>
     </inferredMetricsTieBreakers>
 </document>
