--- a/MathFarm/Base.lproj/Main.storyboard
+++ b/MathFarm/Base.lproj/Main.storyboard
@@ -120,7 +120,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZNn-h5-y6U" userLabel="PatternBtn">
-                                <rect key="frame" x="43" y="514" width="193" height="74"/>
+                                <rect key="frame" x="37" y="527" width="193" height="74"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration" label="Pattern Recognition"/>
@@ -136,14 +136,19 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zab-kf-EeT">
-                                <rect key="frame" x="53" y="409" width="183" height="74"/>
+                                <rect key="frame" x="32" y="411" width="253" height="74"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.085231731150000004" blue="0.078863051640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="Addition"/>
+                                <state key="normal" title="Addition Easy"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="toAdditionLevel:" destination="fZs-Np-QL8" eventType="touchUpInside" id="QO8-Va-sEo"/>
-                                    <segue destination="mDq-6r-5kf" kind="show" identifier="toSubLvlSelection" id="Hsd-yE-EHA"/>
+                                    <action selector="toAdditionEasy:" destination="fZs-Np-QL8" eventType="touchUpInside" id="ZGB-Pp-L9i"/>
+                                    <segue destination="ucJ-tZ-mF5" kind="show" identifier="toEasyAddition" id="y4l-i5-EPf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r9h-mm-sd0">
@@ -154,7 +159,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="xvl-TD-cQ0" kind="showDetail" id="7Td-ot-7qX"/>
+                                    <action selector="backToStartPage:" destination="fZs-Np-QL8" eventType="touchUpInside" id="T7b-gV-hkK"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JT6-fC-sfe">
@@ -174,6 +179,38 @@
                                     <segue destination="ucJ-tZ-mF5" kind="show" identifier="toCountingPro" id="0P9-I0-gyD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UOC-VV-fMh">
+                                <rect key="frame" x="391" y="411" width="253" height="74"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.085231731150000004" blue="0.078863051640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <state key="normal" title="Addition Medium"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="toAdditionMedium:" destination="fZs-Np-QL8" eventType="touchUpInside" id="p0a-LJ-87R"/>
+                                    <segue destination="ucJ-tZ-mF5" kind="show" identifier="toMediumAddition" id="U2a-Ru-aIJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hjo-nZ-FC3">
+                                <rect key="frame" x="691" y="411" width="253" height="74"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.085231731150000004" blue="0.078863051640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <state key="normal" title="Addition Hard"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="toAdditionHard:" destination="fZs-Np-QL8" eventType="touchUpInside" id="6ra-RW-LTt"/>
+                                    <segue destination="ucJ-tZ-mF5" kind="show" identifier="toHardAddition" id="Zvw-mq-O3i"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ftl-Mg-n4Z"/>
@@ -188,7 +225,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lnr-PA-MBJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="444.72656249999994" y="862.5"/>
+            <point key="canvasLocation" x="414.84375" y="884.375"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="TNM-1A-Yta">
@@ -502,73 +539,13 @@
             </objects>
             <point key="canvasLocation" x="1141" y="1409"/>
         </scene>
-        <!--Sub Level Select Controller-->
-        <scene sceneID="W9q-po-6q0">
-            <objects>
-                <viewController id="mDq-6r-5kf" customClass="SubLevelSelectController" customModule="MathFarm" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AgS-lE-gKP">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="thumbs_cartoon-farm-vector3" translatesAutoresizingMaskIntoConstraints="NO" id="twP-XT-UVt">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCH-xB-Xrx">
-                                <rect key="frame" x="150" y="347" width="183" height="74"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.085231731150000004" blue="0.078863051640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="Easy"/>
-                                <connections>
-                                    <action selector="toAdditionLevel:" destination="fZs-Np-QL8" eventType="touchUpInside" id="ivp-Rc-hts"/>
-                                    <action selector="toEasyAddi:" destination="mDq-6r-5kf" eventType="touchUpInside" id="0hi-HP-lSd"/>
-                                    <segue destination="ucJ-tZ-mF5" kind="show" identifier="toEasyAddition" id="br6-gx-Vu0"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aan-6W-bTZ">
-                                <rect key="frame" x="20" y="20" width="193" height="74"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.1058595616" blue="0.19783650420000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <accessibility key="accessibilityConfiguration" label="Go back to start page!"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <segue destination="fZs-Np-QL8" kind="show" identifier="backToUpperLevel" id="bes-H3-K88"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1U-eA-AwB">
-                                <rect key="frame" x="676" y="347" width="183" height="74"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.085231731150000004" blue="0.078863051640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="Hard"/>
-                                <connections>
-                                    <action selector="toAdditionLevel:" destination="fZs-Np-QL8" eventType="touchUpInside" id="qIR-ku-bCD"/>
-                                    <action selector="toHardAddi:" destination="mDq-6r-5kf" eventType="touchUpInside" id="GBf-Hc-EuE"/>
-                                    <segue destination="ucJ-tZ-mF5" kind="show" identifier="toHardAddition" id="qHI-DS-ARz"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="9gp-a5-IdR"/>
-                    </view>
-                    <connections>
-                        <outlet property="toEasyLvl" destination="iCH-xB-Xrx" id="DEq-mJ-LTH"/>
-                        <outlet property="toHardLvl" destination="J1U-eA-AwB" id="IsY-Qo-Dlj"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DXX-iO-4y9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1082.8125" y="112.5"/>
-        </scene>
         <!--Game View Controller-->
         <scene sceneID="ujK-g4-fdG">
             <objects>
                 <viewController storyboardIdentifier="GameViewController1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ucJ-tZ-mF5" customClass="GameViewController" customModule="MathFarm" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldH-EI-I7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1730" y="113"/>
+            <point key="canvasLocation" x="1275" y="112"/>
         </scene>
         <!--Pattern View Controller-->
         <scene sceneID="pQE-nA-58p">
@@ -714,10 +691,9 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="x1m-WK-pkG"/>
-        <segue reference="br6-gx-Vu0"/>
+        <segue reference="U2a-Ru-aIJ"/>
         <segue reference="b0A-S6-Bvs"/>
         <segue reference="fzS-xn-hgQ"/>
-        <segue reference="bes-H3-K88"/>
-        <segue reference="7Td-ot-7qX"/>
+        <segue reference="DPg-em-XKj"/>
     </inferredMetricsTieBreakers>
 </document>
