--- a/MathFarm/Base.lproj/Main.storyboard
+++ b/MathFarm/Base.lproj/Main.storyboard
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aXN-WV-H1Z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aXN-WV-H1Z">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="ArialBold.ttf">
-            <string>Arial-BoldMT</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="R9c-no-8jz">
@@ -331,7 +326,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zda-3d-wIn">
-                                <rect key="frame" x="20" y="20" width="76" height="61"/>
+                                <rect key="frame" x="20" y="20" width="120" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" label="Go back and start a new farm task"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
@@ -405,6 +400,7 @@
                         <outlet property="answerChoice0" destination="QvS-Vt-oo6" id="Zfc-6V-RKF"/>
                         <outlet property="answerChoice1" destination="3HB-nA-PDa" id="T0b-Dc-MLa"/>
                         <outlet property="answerSlot" destination="qcJ-0x-TaR" id="eX5-o2-8Yl"/>
+                        <outlet property="continueButton" destination="qEp-Kr-JlZ" id="Y2L-4V-60X"/>
                         <outlet property="firstAnimal" destination="TrR-dG-ElR" id="P26-KU-BTJ"/>
                         <outlet property="secondAnimal" destination="C8R-kH-EZL" id="OSE-gt-W06"/>
                         <outlet property="zeroAnimal" destination="iOX-yE-Iyg" id="s3L-nX-EfC"/>
@@ -483,7 +479,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JAC-oo-TJs">
-                                <rect key="frame" x="20" y="20" width="76" height="61"/>
+                                <rect key="frame" x="20" y="20" width="120" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" label="Go back and start a new farm task"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
@@ -600,6 +596,7 @@
                         <outlet property="answerChoice0" destination="Gk3-6q-j9v" id="emJ-wL-aZO"/>
                         <outlet property="answerChoice1" destination="rah-2J-SOV" id="49l-BL-8dT"/>
                         <outlet property="answerSlot" destination="Bg4-YR-PUa" id="ihl-ca-HjF"/>
+                        <outlet property="continueButton" destination="jNG-bE-vJE" id="OOd-rw-y4s"/>
                         <outlet property="firstAnimal" destination="pkr-HE-URl" id="Ylu-Oe-t25"/>
                         <outlet property="fourthAnimal" destination="8Qt-gz-x97" id="6NO-OF-yhe"/>
                         <outlet property="secondAnimal" destination="axi-Co-bha" id="G6c-w1-ytu"/>
@@ -661,10 +658,11 @@
         <image name="continueArrow" width="958" height="958"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="42u-Ji-GI6"/>
+        <segue reference="Cwm-Yl-z6H"/>
+        <segue reference="pJ5-Zg-I0v"/>
         <segue reference="U2a-Ru-aIJ"/>
         <segue reference="455-fy-MNg"/>
-        <segue reference="wOl-mi-sLX"/>
+        <segue reference="BNB-C7-zQA"/>
         <segue reference="7vx-Bt-Tqn"/>
     </inferredMetricsTieBreakers>
 </document>
